--- a/docs/assets/highlight.css
+++ b/docs/assets/highlight.css
@@ -7,14 +7,16 @@
   --dark-hl-2: #ce9178;
   --light-hl-3: #0000ff;
   --dark-hl-3: #569cd6;
-  --light-hl-4: #0070c1;
-  --dark-hl-4: #4fc1ff;
-  --light-hl-5: #008000;
-  --dark-hl-5: #6a9955;
-  --light-hl-6: #001080;
-  --dark-hl-6: #9cdcfe;
-  --light-hl-7: #098658;
-  --dark-hl-7: #b5cea8;
+  --light-hl-4: #008000;
+  --dark-hl-4: #6a9955;
+  --light-hl-5: #098658;
+  --dark-hl-5: #b5cea8;
+  --light-hl-6: #0070c1;
+  --dark-hl-6: #4fc1ff;
+  --light-hl-7: #267f99;
+  --dark-hl-7: #4ec9b0;
+  --light-hl-8: #001080;
+  --dark-hl-8: #9cdcfe;
   --light-code-background: #ffffff;
   --dark-code-background: #1e1e1e;
 }
@@ -29,6 +31,7 @@
     --hl-5: var(--light-hl-5);
     --hl-6: var(--light-hl-6);
     --hl-7: var(--light-hl-7);
+    --hl-8: var(--light-hl-8);
     --code-background: var(--light-code-background);
   }
 }
@@ -43,6 +46,7 @@
     --hl-5: var(--dark-hl-5);
     --hl-6: var(--dark-hl-6);
     --hl-7: var(--dark-hl-7);
+    --hl-8: var(--dark-hl-8);
     --code-background: var(--dark-code-background);
   }
 }
@@ -56,6 +60,7 @@
   --hl-5: var(--light-hl-5);
   --hl-6: var(--light-hl-6);
   --hl-7: var(--light-hl-7);
+  --hl-8: var(--light-hl-8);
   --code-background: var(--light-code-background);
 }
 
@@ -68,6 +73,7 @@
   --hl-5: var(--dark-hl-5);
   --hl-6: var(--dark-hl-6);
   --hl-7: var(--dark-hl-7);
+  --hl-8: var(--dark-hl-8);
   --code-background: var(--dark-code-background);
 }
 
@@ -94,6 +100,9 @@
 }
 .hl-7 {
   color: var(--hl-7);
+}
+.hl-8 {
+  color: var(--hl-8);
 }
 pre,
 code {
