--- a/docs/assets/highlight.css
+++ b/docs/assets/highlight.css
@@ -13,8 +13,8 @@
   --dark-hl-5: #b5cea8;
   --light-hl-6: #0070c1;
   --dark-hl-6: #4fc1ff;
-  --light-hl-7: #267f99;
-  --dark-hl-7: #4ec9b0;
+  --light-hl-7: #0451a5;
+  --dark-hl-7: #9cdcfe;
   --light-hl-8: #001080;
   --dark-hl-8: #9cdcfe;
   --light-code-background: #ffffff;
