--- a/docs/assets/highlight.css
+++ b/docs/assets/highlight.css
@@ -11,12 +11,14 @@
   --dark-hl-4: #6a9955;
   --light-hl-5: #098658;
   --dark-hl-5: #b5cea8;
-  --light-hl-6: #0070c1;
-  --dark-hl-6: #4fc1ff;
-  --light-hl-7: #0451a5;
+  --light-hl-6: #af00db;
+  --dark-hl-6: #c586c0;
+  --light-hl-7: #001080;
   --dark-hl-7: #9cdcfe;
-  --light-hl-8: #001080;
+  --light-hl-8: #0451a5;
   --dark-hl-8: #9cdcfe;
+  --light-hl-9: #0070c1;
+  --dark-hl-9: #4fc1ff;
   --light-code-background: #ffffff;
   --dark-code-background: #1e1e1e;
 }
@@ -32,6 +34,7 @@
     --hl-6: var(--light-hl-6);
     --hl-7: var(--light-hl-7);
     --hl-8: var(--light-hl-8);
+    --hl-9: var(--light-hl-9);
     --code-background: var(--light-code-background);
   }
 }
@@ -47,6 +50,7 @@
     --hl-6: var(--dark-hl-6);
     --hl-7: var(--dark-hl-7);
     --hl-8: var(--dark-hl-8);
+    --hl-9: var(--dark-hl-9);
     --code-background: var(--dark-code-background);
   }
 }
@@ -61,6 +65,7 @@
   --hl-6: var(--light-hl-6);
   --hl-7: var(--light-hl-7);
   --hl-8: var(--light-hl-8);
+  --hl-9: var(--light-hl-9);
   --code-background: var(--light-code-background);
 }
 
@@ -74,6 +79,7 @@
   --hl-6: var(--dark-hl-6);
   --hl-7: var(--dark-hl-7);
   --hl-8: var(--dark-hl-8);
+  --hl-9: var(--dark-hl-9);
   --code-background: var(--dark-code-background);
 }
 
@@ -103,6 +109,9 @@
 }
 .hl-8 {
   color: var(--hl-8);
+}
+.hl-9 {
+  color: var(--hl-9);
 }
 pre,
 code {
