feat: bump patch version after big readme update

--- a/docs/assets/highlight.css
+++ b/docs/assets/highlight.css
@@ -1,10 +1,10 @@
 :root {
-  --light-hl-0: #008000;
-  --dark-hl-0: #6a9955;
-  --light-hl-1: #795e26;
-  --dark-hl-1: #dcdcaa;
-  --light-hl-2: #000000;
-  --dark-hl-2: #d4d4d4;
+  --light-hl-0: #001080;
+  --dark-hl-0: #9cdcfe;
+  --light-hl-1: #000000;
+  --dark-hl-1: #d4d4d4;
+  --light-hl-2: #795e26;
+  --dark-hl-2: #dcdcaa;
   --light-hl-3: #a31515;
   --dark-hl-3: #ce9178;
   --light-hl-4: #0000ff;
@@ -13,10 +13,10 @@
   --dark-hl-5: #b5cea8;
   --light-hl-6: #af00db;
   --dark-hl-6: #c586c0;
-  --light-hl-7: #001080;
-  --dark-hl-7: #9cdcfe;
-  --light-hl-8: #0070c1;
-  --dark-hl-8: #4fc1ff;
+  --light-hl-7: #008000;
+  --dark-hl-7: #6a9955;
+  --light-hl-8: #cd3131;
+  --dark-hl-8: #f44747;
   --light-code-background: #ffffff;
   --dark-code-background: #1e1e1e;
 }
